# rag-document

./: .gitignore  README.md  app.py  pyproject.toml  requirements.txt  requirments.txt  ui-main.py
DataBase/: __init__.py  ingest.py  vectorbase.py
Embedder/: __init__.py  embed.py
Generate/: __init__.py  generate.py
Retrieve/: __init__.py  retrieve.py
Utils/: __init__.py  config.py  data_loader.py  utils.py
